--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1440,4 +1440,181 @@
 	},
 	language     = {en}
 }
+@article{sun_temperature_2025,
+	title        = {
+		Temperature {Controls} the {Lifetimes} and {Microbial} {Communities}
+		{Degrading} {Cellulose} {Diacetate} in the {Coastal} {Ocean}
+	},
+	author       = {
+		Sun, Yanchen and James, Bryan D. and Houston, Katelyn R. and Edwards, Brian
+		and Izallalen, Mounir and Mazumder, Sharmistha and Shankar, Rahul and Reddy,
+		Christopher M. and Ward, Collin P.
+	},
+	year         = 2025,
+	month        = sep,
+	journal      = {Environmental Science \& Technology},
+	volume       = 59,
+	number       = 36,
+	pages        = {19468--19478},
+	doi          = {10.1021/acs.est.5c05334},
+	issn         = {0013-936X, 1520-5851},
+	url          = {https://pubs.acs.org/doi/10.1021/acs.est.5c05334},
+	urldate      = {2025-09-29},
+	copyright    = {https://creativecommons.org/licenses/by-nc-nd/4.0/},
+	language     = {en}
+}
+@misc{read_assessing_2025,
+	title        = {
+		Assessing protected areas as climate refugia for threatened plant species in
+		{Britain}
+	},
+	author       = {Read, Freya R. and Warmington, Rachel J. and Beale, Colin M.},
+	year         = 2025,
+	month        = sep,
+	doi          = {10.1101/2025.09.02.673856},
+	url          = {http://biorxiv.org/lookup/doi/10.1101/2025.09.02.673856},
+	urldate      = {2025-09-29},
+	copyright    = {http://creativecommons.org/licenses/by/4.0/},
+	abstract     = {
+		Abstract Climate change is causing the loss or movement of suitable habitats,
+		forcing species to undergo range shifts. However, many may be unable to move
+		to suitable locations, resulting in increased extinctions. Climate refugia,
+		areas maintaining suitable conditions for species now and in the future,
+		offer protection from climate change. These refugia are categorised as in
+		situ, where species are currently present, and ex situ, where they are not.
+		Identifying these areas is vital and they could serve as relocation sites for
+		species unable to migrate naturally. We aimed to identify climate refugia for
+		rare vascular plant species in Britain and examined whether refugia with the
+		highest number of suitable species share any common features. Using predicted
+		2080 distributions, we identified protected areas in Britain that act as in
+		situ or ex situ refugia for 12 of Plantlife’s focal plant species. This study
+		revealed that many current habitats will become unsuitable by 2080,
+		highlighting the urgent need to protect refugia. The limited availability of
+		in situ refugia underscores the importance of ex situ refugia as potential
+		habitats. Given Britain’s fragmented protected areas and species’ low
+		dispersal rates, translocations may be necessary to move threatened species
+		to ex situ refugia. Our findings indicated that protected areas with higher
+		elevations, larger elevational ranges, higher latitude and longitude and
+		larger area will provide climate refugia for a greater number of species.
+		This information can be used to guide the selection and management of
+		protected areas and identify receptor sites for species introductions.
+	},
+	language     = {en}
+}
+@article{fard_developing_2025,
+	title        = {
+		Developing a {Spatiotemporal} {Repository} of {Extreme} {Heat} and {Cold}
+		{Exposure} in the {United} {States} for {Precision} {Public} {Health}
+		{Research}
+	},
+	author       = {
+		Fard, Pedram and Hügel, Jonas and Keivabu, Risto Conte and Dominici,
+		Francesca and Zagheni, Emilio and Estiri, Hossein and Patel, Chirag J.
+	},
+	year         = 2025,
+	month        = sep,
+	journal      = {Environmental Science \& Technology},
+	volume       = 59,
+	number       = 37,
+	pages        = {19872--19884},
+	doi          = {10.1021/acs.est.5c03658},
+	issn         = {0013-936X, 1520-5851},
+	url          = {https://pubs.acs.org/doi/10.1021/acs.est.5c03658},
+	urldate      = {2025-09-29},
+	copyright    = {https://creativecommons.org/licenses/by-nc-nd/4.0/},
+	language     = {en}
+}
+@article{cordero_enhancing_2025,
+	title        = {
+		Enhancing tsunami evacuation strategies in {Puerto} {Rico} using open-source
+		least-cost path analysis
+	},
+	author       = {
+		Cordero, Elvin and Ruiz Vélez, Roy and Huérfano Moreno, Víctor and Sherman,
+		Clark
+	},
+	year         = 2025,
+	month        = sep,
+	journal      = {Journal of Disaster Science and Management},
+	volume       = 1,
+	number       = 1,
+	pages        = 18,
+	doi          = {10.1007/s44367-025-00018-y},
+	issn         = {3005-1746},
+	url          = {https://link.springer.com/10.1007/s44367-025-00018-y},
+	urldate      = {2025-09-29},
+	abstract     = {
+		Abstract Effective disaster planning strengthens community resilience and
+		reduces both damage and casualties from tsunamis. In Puerto Rico, municipal
+		emergency management planners need data on the tsunami evacuation zone (TEZ),
+		wave run-up heights, and estimated evacuation times to inform constituents.
+		There are 46 coastal municipalities within the TEZ. Due to evolving
+		methodologies, software, and staffing, the Puerto Rico Seismic Network’s
+		TsunamiReady Program has only provided walking-time estimates to a subset of
+		communities. This study introduces an effective, repeatable methodology to
+		generate distance to safety and pedestrian evacuation times across all
+		impacted zones. The approach—an iterative least-cost path analysis from road
+		points to safety areas, followed by spatial interpolation—produced evacuation
+		time maps for all 46 municipalities. The longest modeled evacuation time was
+		184 min in Loíza, though average times across most municipalities were under
+		35 min. For comparison, historical tsunami evidence suggests that waves can
+		reach Puerto Rico’s western coast within 2 to 45 min of a generating event.
+		The open-source methodology used here is transferable to other tsunami-prone
+		regions and offers significant advantages over proprietary systems. The
+		results provide Puerto Rico’s emergency managers, and the public, with
+		essential spatial information to identify the highest-risk portions of their
+		TEZ and improve evacuation planning.
+	},
+	language     = {en}
+}
+@article{bionda_mapping_2025,
+	title        = {
+		Mapping risks and landscapes: conservation insights for {Italian} small
+		ruminant populations
+	},
+	shorttitle   = {Mapping risks and landscapes},
+	author       = {Bionda, Arianna and Negro, Alessio and Grande, Silverio and Crepaldi, Paola},
+	year         = 2025,
+	month        = sep,
+	journal      = {Pastoralism: Research, Policy and Practice},
+	volume       = 15,
+	pages        = 14997,
+	doi          = {10.3389/past.2025.14997},
+	issn         = {2041-7136},
+	url          = {https://www.frontierspartnerships.org/articles/10.3389/past.2025.14997/full},
+	urldate      = {2025-09-29},
+	abstract     = {
+		Local livestock breeds are valuable genetic resources that support ecosystem
+		services, cultural identity, and the sustainability of animal husbandry.
+		However, these populations face increasing threats from intensive farming,
+		land abandonment, and environmental risks. This study aimed to assess Italian
+		small ruminant populations’ exposure to environmental threats and
+		distribution across different landscapes. Therefore, we integrated
+		geolocation data of 3,712 active registered farms of 41 goat and 47 sheep
+		breeds with publicly available data on environmental hazards, including
+		seismic activity, landslides, floods, and projected climate change, alongside
+		landscape characterization maps of Italy. Additionally, we evaluated
+		extinction risks based on effective population size (Ne) and calculated
+		biodiversity indices at the provincial level to describe small ruminant
+		biodiversity in Italy. Our findings indicate that over a quarter of Italian
+		small ruminant populations are at short-term risk of extinction, while nearly
+		half face long-term threats. The two most pressing environmental concerns
+		include seismic risk, particularly for breeds in southern Italy, and climate
+		change projections indicating shifts to warmer and drier conditions,
+		especially for Alpine breeds traditionally adapted to colder environments.
+		Landscape characterization revealed that sheep farming is predominantly
+		associated with agricultural landscapes, whereas goat farms are more
+		frequently linked to woodlands and mountainous areas. Each breed exhibits
+		specific environmental adaptations, underscoring their role in sustainable
+		land management. Biodiversity analyses highlighted significant regional
+		disparities, with high diversity in provinces such as Cuneo and Frosinone,
+		whereas others exhibit limited breed representation. Understanding the
+		spatial distribution of local breeds, their exposure to environmental risks,
+		and their interactions with landscapes is essential for developing targeted
+		conservation strategies. Integrating ecological, genetic, and spatial data
+		allows for effective prioritization of conservation efforts to safeguard
+		genetic diversity, support rural communities, and promote sustainable
+		livestock farming.
+	}
+}
 
