--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1617,4 +1617,49 @@
 		livestock farming.
 	}
 }
+@article{LEBRON2025109454,
+	title        = {
+		Patterns and thresholds for soil {pH} across {Europe} in relation to soil
+		health and degradation
+	},
+	author       = {
+		Inma Lebron and Christopher J. Feeney and Sabine Reinsch and Nima Shokri and
+		Mehdi H. Afshar and Steve Lofts and Rob Griffiths and David Fidler and Briony
+		Jones and Panos Panagos and Kasia Sawicka and Aidan M. Keith and Fiona Seaton
+		and David A. Robinson
+	},
+	year         = 2025,
+	journal      = {CATENA},
+	volume       = 260,
+	pages        = 109454,
+	doi          = {10.1016/j.catena.2025.109454},
+	issn         = {0341-8162},
+	url          = {https://www.sciencedirect.com/science/article/pii/S0341816225007568},
+	abstract     = {
+		Soil pH indicates the level of acidity or alkalinity in the soil environment,
+		influencing various biogeochemical and physical processes. Additionally, soil
+		pH levels are crucial in determining the bioavailability of elements such as
+		iron, aluminium, and heavy metals which can be harmful. As such, pH is an
+		important soil health and degradation indicator. Although there is a
+		well-established understanding of soil pH at localized levels, the spatial
+		and temporal variations, as well as significant thresholds at national and
+		continental scales, are not sufficiently documented. Here we analyse the
+		European topsoil pH data (LUCAS) in combination with other soil properties
+		from the LUCAS survey, to identify thresholds and spatial patterns of soil pH
+		across Europe in relation to soil health and degradation. At the European
+		scale we found: 1) the water balance, calculated as mean annual precipitation
+		minus potential evapotranspiration (MAP-PET), provides essential context to
+		interpret soil pH; 2) the shift from organic carbon-rich soils to those
+		dominated by inorganic carbon is observed at a pH of about 7.2, however, soil
+		moisture levels may be more critical than pH for the accumulation of soil
+		organic carbon; 3) we identified three distinct clusters within the
+		multivariate regression tree: acidophiles (below pH 5.2), neutrophiles (pH
+		5.2–6.9) and alkaliphiles (above pH 6.9), while optimum microbial diversity
+		occurred between pH 6 and 7. Earthworm abundance, as reported by the sWorm
+		database, is more nuanced and dependent on land use; 4) risk of degradation
+		by heavy metals cannot be captured by a single pH threshold. Finally, we
+		identify soil pH thresholds that can aid policymakers in identifying regions
+		that may require protection or intervention.
+	}
+}
 
