--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -674,3 +674,20 @@
 	issn         = {0341-8162},
 	url          = {https://www.sciencedirect.com/science/article/pii/S0341816225007568},
 }
+@article{jones_saur_2025,
+	title        = {Saur and decline: {Patterns} in lizard imports to the {US} (2000–2022)},
+	shorttitle   = {Saur and decline},
+	author       = {Jones, Max Dolton},
+	year         = 2025,
+	month        = oct,
+	journal      = {PLOS One},
+	volume       = 20,
+	number       = 10,
+	pages        = {e0333746},
+	doi          = {10.1371/journal.pone.0333746},
+	issn         = {1932-6203},
+	url          = {https://dx.plos.org/10.1371/journal.pone.0333746},
+	urldate      = {2025-10-27},
+	language     = {en},
+	editor       = {Mizsei, Edvard}
+}
