--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -691,3 +691,23 @@
 	language     = {en},
 	editor       = {Mizsei, Edvard}
 }
+@article{doi:10.1073/pnas.2517585122,
+	title        = {
+		General laws of biodiversity: {Climatic} niches predict plant range size and
+		ecological dominance globally
+	},
+	author       = {
+		Gabriel M. Moulatlet  and Cory Merow  and Brian Maitner  and Brad Boyle  and
+		Xiao Feng  and Amy E. Frazier  and Cesar Hinojo-Hinojo  and Erica A. Newman
+		and Patrick R. Roehrdanz  and Lei Song  and Fabricio Villalobos  and Pablo A.
+		Marquet  and Jens-Christian Svenning  and Brian J. Enquist
+	},
+	year         = 2025,
+	journal      = {Proceedings of the National Academy of Sciences},
+	volume       = 122,
+	number       = 46,
+	pages        = {e2517585122},
+	doi          = {10.1073/pnas.2517585122},
+	url          = {https://www.pnas.org/doi/abs/10.1073/pnas.2517585122}
+}
+
