Add more references

--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -12,7 +12,7 @@
 	urldate      = {2025-03-31},
 	copyright    = {http://creativecommons.org/licenses/by-nc-nd/4.0/},
 	type         = {PhD thesis},
-	school       = {University of York},
+	school       = {University of York}
 }
 @article{hattendorf_dirofilaria_2025,
 	title        = {
@@ -24,7 +24,7 @@
 	year         = 2025,
 	journal      = {bioRxiv},
 	doi          = {10.1101/2025.02.17.638693},
-	url          = {https://www.biorxiv.org/content/early/2025/02/18/2025.02.17.638693},
+	url          = {https://www.biorxiv.org/content/early/2025/02/18/2025.02.17.638693}
 }
 @phdthesis{salvador_baiges_clima_2024,
 	title        = {
@@ -39,7 +39,7 @@
 	school       = {
 		Universitat Autònoma de Barcelona. Programa de Doctorat en Arqueologia
 		Prehistòrica
-	},
+	}
 }
 @article{williams_active_2024,
 	title        = {
@@ -58,7 +58,7 @@
 	issn         = {2688-8319, 2688-8319},
 	url          = {https://besjournals.onlinelibrary.wiley.com/doi/10.1002/2688-8319.12315},
 	urldate      = {2025-03-31},
-	copyright    = {http://creativecommons.org/licenses/by-nc-nd/4.0/},
+	copyright    = {http://creativecommons.org/licenses/by-nc-nd/4.0/}
 }
 @article{elio_medina_how_2025,
 	title        = {How to {Approach} the {Definition} of {WUI} in {Northern} {Europe}},
@@ -73,7 +73,7 @@
 	doi          = {10.1002/fam.3264},
 	issn         = {0308-0501, 1099-1018},
 	url          = {https://onlinelibrary.wiley.com/doi/10.1002/fam.3264},
-	urldate      = {2025-03-31},
+	urldate      = {2025-03-31}
 }
 @article{di_fabio_climatic_2024,
 	title        = {
@@ -92,7 +92,7 @@
 	doi          = {10.3389/ffgc.2024.1422165},
 	issn         = {2624-893X},
 	url          = {https://www.frontiersin.org/articles/10.3389/ffgc.2024.1422165/full},
-	urldate      = {2025-03-31},
+	urldate      = {2025-03-31}
 }
 @article{nityagovsky_distribution_2024,
 	title        = {
@@ -115,7 +115,7 @@
 	issn         = {2311-7524},
 	url          = {https://www.mdpi.com/2311-7524/10/4/326},
 	urldate      = {2025-03-31},
-	copyright    = {https://creativecommons.org/licenses/by/4.0/},
+	copyright    = {https://creativecommons.org/licenses/by/4.0/}
 }
 @article{masson_systematic_2025,
 	title        = {
@@ -138,7 +138,7 @@
 	url          = {
 		https://environmentalmicrobiome.biomedcentral.com/articles/10.1186/s40793-025-00677-7
 	},
-	urldate      = {2025-03-31},
+	urldate      = {2025-03-31}
 }
 @article{buma_including_2024,
 	title        = {
@@ -155,7 +155,7 @@
 	doi          = {10.1002/ael2.20146},
 	issn         = {2471-9625, 2471-9625},
 	url          = {https://acsess.onlinelibrary.wiley.com/doi/10.1002/ael2.20146},
-	urldate      = {2025-03-31},
+	urldate      = {2025-03-31}
 }
 @article{garcia-alvarado_assessing_2025,
 	title        = {
@@ -178,7 +178,7 @@
 	issn         = {1424-2818},
 	url          = {https://www.mdpi.com/1424-2818/17/3/195},
 	urldate      = {2025-03-31},
-	copyright    = {https://creativecommons.org/licenses/by/4.0/},
+	copyright    = {https://creativecommons.org/licenses/by/4.0/}
 }
 @article{wang_relationship_2025,
 	title        = {
@@ -196,7 +196,7 @@
 	doi          = {10.1002/ldr.5516},
 	issn         = {1085-3278, 1099-145X},
 	url          = {https://onlinelibrary.wiley.com/doi/10.1002/ldr.5516},
-	urldate      = {2025-03-19},
+	urldate      = {2025-03-19}
 }
 @article{su_high_2025,
 	title        = {
@@ -217,7 +217,7 @@
 	issn         = {2076-2615},
 	url          = {https://www.mdpi.com/2076-2615/15/4/578},
 	urldate      = {2025-03-19},
-	copyright    = {https://creativecommons.org/licenses/by/4.0/},
+	copyright    = {https://creativecommons.org/licenses/by/4.0/}
 }
 @article{varma_socio-economic_2025,
 	title        = {
@@ -234,7 +234,7 @@
 	doi          = {10.1038/s43016-025-01130-1},
 	issn         = {2662-1355},
 	url          = {https://www.nature.com/articles/s43016-025-01130-1},
-	urldate      = {2025-03-19},
+	urldate      = {2025-03-19}
 }
 @misc{lindgren_inlabru_2024,
 	title        = {
@@ -246,18 +246,7 @@
 		Håvard and Seaton, Andrew E.
 	},
 	year         = 2024,
-	url          = {https://arxiv.org/abs/2407.00791},
-}
-@article{kutza_endemic_2025,
-	title        = {
-		Endemic and invasion dynamics of wild tomato species on the {Galápagos}
-		{Islands}, across two centuries of collection records
-	},
-	author       = {Kutza, Alex D. and Hert, Zoe L. and Moyle, Leonie C.},
-	year         = 2025,
-	journal      = {bioRxiv},
-	doi          = {10.1101/2025.01.09.632230},
-	url          = {https://www.biorxiv.org/content/early/2025/01/11/2025.01.09.632230},
+	url          = {https://arxiv.org/abs/2407.00791}
 }
 @article{luhken_high_2024,
 	title        = {
@@ -280,7 +269,7 @@
 	url          = {
 		https://parasitesandvectors.biomedcentral.com/articles/10.1186/s13071-024-06594-x
 	},
-	urldate      = {2025-03-19},
+	urldate      = {2025-03-19}
 }
 @article{mallory_mercury_2025,
 	title        = {
@@ -298,7 +287,7 @@
 	pages        = 179186,
 	doi          = {10.1016/j.scitotenv.2025.179186},
 	issn         = {0048-9697},
-	url          = {https://www.sciencedirect.com/science/article/pii/S0048969725008216},
+	url          = {https://www.sciencedirect.com/science/article/pii/S0048969725008216}
 }
 @article{williams_ecosystem_2025,
 	title        = {
@@ -315,7 +304,7 @@
 	doi          = {10.1016/j.cub.2025.02.062},
 	issn         = {09609822},
 	url          = {https://linkinghub.elsevier.com/retrieve/pii/S0960982225002763},
-	urldate      = {2025-04-12},
+	urldate      = {2025-04-12}
 }
 @article{Maitner2025.04.03.647025,
 	title        = {{Flexible Methods for Species Distribution Modeling with Small Samples}},
@@ -328,7 +317,7 @@
 	publisher    = {Cold Spring Harbor Laboratory},
 	doi          = {10.1101/2025.04.03.647025},
 	url          = {https://www.biorxiv.org/content/early/2025/04/08/2025.04.03.647025},
-	elocation-id = {2025.04.03.647025},
+	elocation-id = {2025.04.03.647025}
 }
 @article{coffey_spatial_2025,
 	title        = {
@@ -343,7 +332,7 @@
 	doi          = {10.1002/ajb2.70034},
 	issn         = {0002-9122, 1537-2197},
 	url          = {https://bsapubs.onlinelibrary.wiley.com/doi/10.1002/ajb2.70034},
-	urldate      = {2025-04-27},
+	urldate      = {2025-04-27}
 }
 @article{https://doi.org/10.1002/ece3.71137,
 	title        = {
@@ -357,7 +346,7 @@
 	number       = 5,
 	pages        = {e71137},
 	doi          = {10.1002/ece3.71137},
-	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.71137},
+	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.71137}
 }
 @article{Wong_2025,
 	title        = {
@@ -376,7 +365,7 @@
 	number       = 2,
 	pages        = {025006},
 	doi          = {10.1088/2752-664X/add5fd},
-	url          = {https://dx.doi.org/10.1088/2752-664X/add5fd},
+	url          = {https://dx.doi.org/10.1088/2752-664X/add5fd}
 }
 @article{10.3389/fsoil.2025.1548645,
 	title        = {
@@ -395,7 +384,7 @@
 	issn         = {2673-8619},
 	url          = {
 		https://www.frontiersin.org/journals/soil-science/articles/10.3389/fsoil.2025.1548645
-	},
+	}
 }
 @article{doi:10.1073/pnas.2417203122,
 	title        = {
@@ -412,7 +401,7 @@
 	number       = 25,
 	pages        = {e2417203122},
 	doi          = {10.1073/pnas.2417203122},
-	url          = {https://www.pnas.org/doi/abs/10.1073/pnas.2417203122},
+	url          = {https://www.pnas.org/doi/abs/10.1073/pnas.2417203122}
 }
 @article{MERLIN2025100361,
 	title        = {
@@ -425,7 +414,7 @@
 	pages        = 100361,
 	doi          = {10.1016/j.fecs.2025.100361},
 	issn         = {2197-5620},
-	url          = {https://www.sciencedirect.com/science/article/pii/S2197562025000703},
+	url          = {https://www.sciencedirect.com/science/article/pii/S2197562025000703}
 }
 @article{hattendorf_vectors_2025,
 	title        = {
@@ -446,7 +435,7 @@
 	doi          = {10.1186/s40249-025-01328-2},
 	issn         = {2049-9957},
 	url          = {https://idpjournal.biomedcentral.com/articles/10.1186/s40249-025-01328-2},
-	urldate      = {2025-09-15},
+	urldate      = {2025-09-15}
 }
 @article{rock_spatiotemporal_2025,
 	title        = {
@@ -466,7 +455,7 @@
 	doi          = {10.1007/s10661-025-14258-1},
 	issn         = {1573-2959},
 	url          = {https://link.springer.com/10.1007/s10661-025-14258-1},
-	urldate      = {2025-09-15},
+	urldate      = {2025-09-15}
 }
 @article{kiel_snowmelt_2025,
 	title        = {
@@ -483,7 +472,7 @@
 	doi          = {10.1111/1365-2745.70099},
 	issn         = {0022-0477, 1365-2745},
 	url          = {https://besjournals.onlinelibrary.wiley.com/doi/10.1111/1365-2745.70099},
-	urldate      = {2025-09-15},
+	urldate      = {2025-09-15}
 }
 @article{perez-giron_predicting_2025,
 	title        = {
@@ -502,7 +491,7 @@
 	doi          = {10.3389/ffgc.2025.1624612},
 	issn         = {2624-893X},
 	url          = {https://www.frontiersin.org/articles/10.3389/ffgc.2025.1624612/full},
-	urldate      = {2025-09-15},
+	urldate      = {2025-09-15}
 }
 @article{fu_integrating_2025,
 	title        = {
@@ -522,7 +511,7 @@
 	doi          = {10.1038/s43247-025-02649-8},
 	issn         = {2662-4435},
 	url          = {https://www.nature.com/articles/s43247-025-02649-8},
-	urldate      = {2025-09-15},
+	urldate      = {2025-09-15}
 }
 @article{kutza_endemic_2025,
 	title        = {
@@ -537,7 +526,7 @@
 	doi          = {10.1111/nph.70321},
 	issn         = {0028-646X, 1469-8137},
 	url          = {https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.70321},
-	urldate      = {2025-09-15},
+	urldate      = {2025-09-15}
 }
 @article{riley_biomonitoring_2025,
 	title        = {
@@ -559,7 +548,7 @@
 	doi          = {10.1186/s12915-025-02284-x},
 	issn         = {1741-7007},
 	url          = {https://bmcbiol.biomedcentral.com/articles/10.1186/s12915-025-02284-x},
-	urldate      = {2025-09-15},
+	urldate      = {2025-09-15}
 }
 @article{sun_temperature_2025,
 	title        = {
@@ -581,7 +570,7 @@
 	issn         = {0013-936X, 1520-5851},
 	url          = {https://pubs.acs.org/doi/10.1021/acs.est.5c05334},
 	urldate      = {2025-09-29},
-	copyright    = {https://creativecommons.org/licenses/by-nc-nd/4.0/},
+	copyright    = {https://creativecommons.org/licenses/by-nc-nd/4.0/}
 }
 @misc{read_assessing_2025,
 	title        = {
@@ -594,7 +583,7 @@
 	doi          = {10.1101/2025.09.02.673856},
 	url          = {http://biorxiv.org/lookup/doi/10.1101/2025.09.02.673856},
 	urldate      = {2025-09-29},
-	copyright    = {http://creativecommons.org/licenses/by/4.0/},
+	copyright    = {http://creativecommons.org/licenses/by/4.0/}
 }
 @article{fard_developing_2025,
 	title        = {
@@ -616,7 +605,7 @@
 	issn         = {0013-936X, 1520-5851},
 	url          = {https://pubs.acs.org/doi/10.1021/acs.est.5c03658},
 	urldate      = {2025-09-29},
-	copyright    = {https://creativecommons.org/licenses/by-nc-nd/4.0/},
+	copyright    = {https://creativecommons.org/licenses/by-nc-nd/4.0/}
 }
 @article{cordero_enhancing_2025,
 	title        = {
@@ -636,7 +625,7 @@
 	doi          = {10.1007/s44367-025-00018-y},
 	issn         = {3005-1746},
 	url          = {https://link.springer.com/10.1007/s44367-025-00018-y},
-	urldate      = {2025-09-29},
+	urldate      = {2025-09-29}
 }
 @article{bionda_mapping_2025,
 	title        = {
@@ -653,7 +642,7 @@
 	doi          = {10.3389/past.2025.14997},
 	issn         = {2041-7136},
 	url          = {https://www.frontierspartnerships.org/articles/10.3389/past.2025.14997/full},
-	urldate      = {2025-09-29},
+	urldate      = {2025-09-29}
 }
 @article{LEBRON2025109454,
 	title        = {
@@ -672,7 +661,7 @@
 	pages        = 109454,
 	doi          = {10.1016/j.catena.2025.109454},
 	issn         = {0341-8162},
-	url          = {https://www.sciencedirect.com/science/article/pii/S0341816225007568},
+	url          = {https://www.sciencedirect.com/science/article/pii/S0341816225007568}
 }
 @article{jones_saur_2025,
 	title        = {Saur and decline: {Patterns} in lizard imports to the {US} (2000–2022)},
@@ -710,4 +699,75 @@
 	doi          = {10.1073/pnas.2517585122},
 	url          = {https://www.pnas.org/doi/abs/10.1073/pnas.2517585122}
 }
-
+@article{Tanaka2025,
+	title        = {{Examining the Interface Design of Tidyverse}},
+	author       = {Tanaka, Emi},
+	year         = 2025,
+	month        = {Nov},
+	day          = {05},
+	journal      = {Australian {\&} New Zealand Journal of Statistics},
+	publisher    = {John Wiley {\&} Sons, Ltd},
+	doi          = {10.1111/anzs.70031},
+	issn         = {1369-1473},
+	url          = {https://doi.org/10.1111/anzs.70031},
+	keywords     = {
+		cognitive ergonomics; cognitive systems engineering; concrete syntax;
+		human-centred design; human--computer interaction; R programming; statistical
+		software; user interface design
+	}
+}
+@article{maravall-lopez_eight_2025,
+	title        = {
+		Eight millennia of continuity of a previously unknown lineage in {Argentina}
+	},
+	author       = {
+		Maravall-López, Javier and Motti, Josefina M. B. and Pastor, Nicolás and
+		Tavella, María Pía and Fabra, Mariana and Babot, Pilar and Bonomo, Mariano
+		and Cornero, Silvia E. and Lamenza, Guillermo N. and Leon, Diego Catriel and
+		Miranda De Zela, Paula C. and Politis, Gustavo G. and Angeletti, Sofía C. and
+		Cattáneo, G. Roxana and Dantas, Mariana and Drube, Hilton and Gonzalez
+		Baroni, Lucia G. and Hocsman, Salomón and Izeta, Andrés D. and Moralejo,
+		Reinaldo A. and Aldazabal, Verónica and Basso, Diego M. and Bayón, Cristina
+		and Couso, María Guillermina and D’Andrea, Ulises and Del Río, Paula and
+		Figueroa, Germán G. and Frontini, Romina and Gonzalez, Mariela Edith and
+		Laguens, Andrés G. and Martínez, Jorge G. and Messineo, Pablo G. and Nores,
+		Beatriz and Olivera, Daniel E. and Sario, Gisela M. and Sbattella, Analía and
+		Scabuzzo, Clara and Tavarone, Aldana M. and Vecchi, Rodrigo and Callan, Kim
+		and Caughran, Ella and Estrada, Oscar and Frost, Trudi and Iliev, Lora and
+		Kearns, Aisling and Kellogg, Jack and Krettek, Kim-Louise and Lawson, Ann
+		Marie and Mah, Matthew and Manjila, Nihal and Micco, Adam and Patterson, Iris
+		and Qiu, Lijun and Roca-Rada, Xavier and Soos, Gregory and Webb, Peter A. and
+		Workman, J. Noah and Rohland, Nadin and Patterson, Nick and Lazaridis, Iosif
+		and Fehren-Schmitz, Lars and Posth, Cosimo and Llamas, Bastien and Mallick,
+		Swapan and Demarchi, Darío A. and Cabana, Graciela S. and Reich, David and
+		Nores, Rodrigo
+	},
+	year         = 2025,
+	month        = nov,
+	journal      = {Nature},
+	doi          = {10.1038/s41586-025-09731-3},
+	issn         = {0028-0836, 1476-4687},
+	url          = {https://www.nature.com/articles/s41586-025-09731-3},
+	urldate      = {2025-11-18},
+	language     = {en}
+}
+@article{d17110781,
+	title        = {
+		Prezygotic and Postzygotic Reproductive Incompatibilities Complement Each
+		Other in the Formation of a Cryptic Amphipod Species: The Example of a
+		{Lake Baikal} Species Complex \textit{{Eulimnogammarus} verrucosus}
+	},
+	author       = {
+		Drozdova, Polina and Shatilina, Zhanna and Telnes, Ekaterina and Gurkov,
+		Anton and Saranchina, Alexandra and Mutin, Andrei and Zolotovskaya, Elena and
+		Timofeyev, Maxim
+	},
+	year         = 2025,
+	journal      = {Diversity},
+	volume       = 17,
+	number       = 11,
+	doi          = {10.3390/d17110781},
+	issn         = {1424-2818},
+	url          = {https://www.mdpi.com/1424-2818/17/11/781},
+	article-number = 781
+}
