--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -771,3 +771,47 @@
 	url          = {https://www.mdpi.com/1424-2818/17/11/781},
 	article-number = 781
 }
+@article{we-25-221-2025,
+	title        = {Identifying refugia from the synergistic threats of climate change and invasive species},
+	author       = {Lee, F. and Kusabs, I. A. K. and Perry, G. L. W. and MacNeil, C.},
+	year         = 2025,
+	journal      = {Web Ecology},
+	volume       = 25,
+	number       = 2,
+	pages        = {221--239},
+	doi          = {10.5194/we-25-221-2025},
+	url          = {https://we.copernicus.org/articles/25/221/2025/}
+}
+@article{ZHOU2026100294,
+	title        = {Vascular plant diversity and distribution pattern in {Tajikistan}: A global hotspot of diversity},
+	author       = {Yixin Zhou and Suliya Ma and Wenjun Li and Parvina Kurbonova and Mariyo Boboev and Yufan Li and Hikmat Hisoriev and Keping Ma and Weikang Yang and Yuanming Zhang},
+	year         = 2026,
+	journal      = {Regional Sustainability},
+	pages        = 100294,
+	doi          = {10.1016/j.regsus.2026.100294},
+	issn         = {2666-660X},
+	url          = {https://www.sciencedirect.com/science/article/pii/S2666660X26000046},
+	keywords     = {Vascular plant, Species diversity, Distribution pattern, Conservation gaps, Tajikistan}
+}
+@article{su18010439,
+	title        = {Agroforestry Optimisation for Climate Policy: Mapping Silvopastoral Carbon Sequestration Trade-Offs in the {Mediterranean}},
+	author       = {Kiziridis, Diogenis A. and Karmiris, Ilias and Fotakis, Dimitrios},
+	year         = 2026,
+	journal      = {Sustainability},
+	volume       = 18,
+	number       = 1,
+	doi          = {10.3390/su18010439},
+	issn         = {2071-1050},
+	url          = {https://www.mdpi.com/2071-1050/18/1/439},
+	article-number = 439
+}
+@article{egusphere-2025-6363,
+	title        = {Predicting the risk of individual tree fall along powerlines in {Norway} with a mechanistic wind risk model and machine learning},
+	author       = {Merlin, M. and Gardiner, B. and Solberg, S.},
+	year         = 2026,
+	journal      = {EGUsphere},
+	volume       = 2026,
+	pages        = {1--34},
+	doi          = {10.5194/egusphere-2025-6363},
+	url          = {https://egusphere.copernicus.org/preprints/2026/egusphere-2025-6363/}
+}
